# game-utils

./: .gitignore  CMakeLists.txt  README.md  build-requirements.txt  commands  controller.py  controller_maps.py  game.py  images.py  physics.py  pyproject.toml  requirements.txt  sprites.py  vector_utils.py
docs/: controller.md  game.md  images.md  physics.md  sprites.md  vector_utils.md
src/game_utils/: controller.py  demo.py  game.py  toolkit.py  vector_utils.py
src/game_utils/.config/: demo.json
src/game_utils/clock/: __init__.py  clock.c  clock.py  clock.pyx
src/game_utils/controller/: __init__.py  controller.py
src/game_utils/demo/: __init__.py  demo.old.py  demo.py
src/game_utils/game/: __init__.py  game.c  game.py  game.pyx
src/game_utils/physics/: physics.py
src/game_utils/physics/lib/: linear_algebra.c  linear_algebra.h  physics_body.c  physics_body.h  vector_math.c  vector_math.h
src/game_utils/screen/: __init__.py  screen.c  screen.py
src/game_utils/sprites/: __init__.py  sprites.py
src/game_utils/vector_utils/lib/: vector_math.h
tests/: test_controller.py  test_game.py  test_physics.py  test_screen.py  test_sprites.py  test_toolkit.py
tests/test_game/data/: test.json
