[project]
name = "game-utils"
version = "1.1.3.1"
authors = [
    { name="Bee Hall", email="bhall1224@gmail.com" },
]
description = "A Python Game Engine"
readme = "README.md"
requires-python = ">=3.12,<=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame==2.6.1"
]

[project.urls]
"Homepage" = "https://github.com/bhall1224/game-utils"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
