[project]
name = "game-utils"
version = "2.0.0.0"
authors = [
    { name="Bee Hall", email="bhall1224@gmail.com" },
]
description = "A Python Game Engine"
readme = "README.md"
requires-python = ">=3.12,<=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame==2.6.1"
]

[project.urls]
"Homepage" = "https://github.com/bhall1224/game-utils"

[tool.setuptools]
ext-modules = [
    {name="game_utils.game.game", sources=["src/game_utils/game/game.pyx"]},
    {name="game_utils.clock.clock", sources=["src/game_utils/clock/clock.pyx"]},
    {name="game_utils.screen.screen", sources=["src/game_utils/screen/screen.pyx"]},
]

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"
